# switchbee

./: .dockerignore  .gitignore  changelog.md  dockerfile  main.py  pyproject.toml  requirement.txt
scratch/: check_call_details.py  check_calls.py  test_sarvam.py
src/: auto_call.py  bot.py  campaign_runner.py  candidates.csv  interest.py  interested.csv  not_interested.csv  prompt.py  service.py  test_exotel_auth.py
src/campaigns/0717de80-4e0b-4180-8b61-78ffd775d2d3/: meta.json
src/campaigns/9b924448-16b7-4554-8098-236d9a3011e3/: meta.json
src/campaigns/b108ac96-6995-4514-818d-7dabaec7e403/: meta.json
src/campaigns/f18a7ae7-f5e6-4668-93b6-fc5e23ed859d/: meta.json
